Fixed line breaks on headers, changed gallery alignment to bottom, added museum image borders and fixed overflow.

--- a/css/about.css
+++ b/css/about.css
@@ -36,21 +36,10 @@
     font-style: normal;
 }
 
-#quote-br-2 {
-    display: none;
-}
-
 @media screen and (max-width: 768px) {
-    .quote-br-2 {
-        display: inline;
-    }
     .about-start {
         background-position: 40% 0%;
     }
-}
-
-.quotation-marks {
-    font-family: "roboto";
 }
 
 .third-section {
