--- a/css/homepage.css
+++ b/css/homepage.css
@@ -65,7 +65,3 @@ body {
     width: 100%;
     height: 100%;
 }
-
-.quotation-marks {
-    font-family: "roboto";
-}
